<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.notifications.NotificationsFragment">

    <Button
        android:id="@+id/button6"
        android:layout_width="382dp"
        android:layout_height="74dp"
        android:layout_marginTop="10dp"
        android:background="@color/button_color"
        android:gravity="center|start"
        android:text="@string/button_studierendenwerk"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:drawableRight="@drawable/ic_pfeilright"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.448"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button7"
        android:layout_width="382dp"
        android:layout_height="74dp"
        android:layout_marginTop="8dp"
        android:background="@color/button_color"
        android:drawableRight="@drawable/ic_pfeilright"
        android:gravity="center|start"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:text="@string/button_fahrplan"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.448"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button6" />

    <Button
        android:id="@+id/button8"
        android:layout_width="382dp"
        android:layout_height="74dp"
        android:layout_marginTop="8dp"
        android:background="@color/button_color"
        android:drawableRight="@drawable/ic_pfeilright"
        android:gravity="center|start"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:text="@string/button_öffnungszeiten"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.448"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button7" />

    <Button
        android:id="@+id/button9"
        android:layout_width="382dp"
        android:layout_height="74dp"
        android:layout_marginTop="8dp"
        android:background="@color/button_color"
        android:drawableRight="@drawable/ic_pfeilright"
        android:gravity="center|start"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:text="@string/button_zusatzstoffe"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.448"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button8" />

    <Button
        android:id="@+id/button10"
        android:layout_width="382dp"
        android:layout_height="74dp"
        android:layout_marginTop="8dp"
        android:background="@color/button_color"
        android:gravity="center|start"
        android:text="@string/button_bezahlen"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:drawableRight="@drawable/ic_pfeilright"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.448"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button9" />

    <Button
        android:id="@+id/button11"
        android:layout_width="382dp"
        android:layout_height="74dp"
        android:layout_marginTop="8dp"
        android:background="@color/button_color"
        android:gravity="center|start"
        android:text="@string/button_impressum"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:drawableRight="@drawable/ic_pfeilright"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.448"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button10" />


</androidx.constraintlayout.widget.ConstraintLayout>